--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.23.16",
     "googleapis": "^160.0.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
+    "motion": "^12.23.16",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
@@ -60,7 +62,8 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
-    "zod": "^4.1.7"
+    "zod": "^4.1.7",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
