--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.31.10",
     "@clerk/themes": "^2.4.18",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.1",
     "@prisma/client": "^6.16.1",
     "@radix-ui/react-accordion": "^1.2.12",
