--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "twitter-api-v2": "^1.27.0",
     "vaul": "^1.1.2",
     "zod": "^4.1.7",
     "zustand": "^5.0.8"
